[user-service] Finalizing UserControllerTest